--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,7 @@
 #root {
-  max-width: 1280px;
-  /* margin: 0 auto; */
+  margin: 0 auto;
   padding: 1rem;
   /* text-align: center; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-}
+
