--- a/src/components/SearchForm/SearchForm.module.css
+++ b/src/components/SearchForm/SearchForm.module.css
@@ -1,11 +1,30 @@
 .form {
   display: flex;
+  justify-content: center;
   padding: 10px;
   gap: 10px;
 }
 .input {
   width: 300px;
   border-radius: 4px;
+  border: 1px solid var(--third-background-color);
+  background-color: var(--second-background-color);
+  color: var(--first-text-color);
+  transition: border-color 0.25s, color 0.25s;
   padding: 4px;
   padding-left: 8px;
+}
+
+.input:hover, .input:focus{
+  border-color: var(--second-hover-color);
+}
+
+.form button {
+  background-color: var(--second-background-color);
+  transition: border-color 0.25s, color 0.25s;
+}
+
+.form button:hover{
+  color: var(--second-hover-color);
+  border-color: var(--second-hover-color);
 }
