--- a/src/index.css
+++ b/src/index.css
@@ -4,23 +4,28 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: black;
-  background-color: bisque;
+  color: var(--first-text-color);
+  background-color: var(--first-background-color);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --first-background-color: #222831;
+  --second-background-color: #393e46;
+  --third-background-color: #2d4059;
+  --fourth-background-color: #3e4a61;
+
+  --first-text-color: #d9dad7;
+
+  --first-hover-color: #f96d00;
+  --second-hover-color: #c24d2c; 
 }
 
-/* a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-} */
+/*https://www.shecodes.io/palettes/633, /622*/
+
+
 ul,
 li {
   list-style: none;
@@ -32,15 +37,14 @@ p {
 }
 a {
   text-decoration: none;
-  color: rgb(114, 56, 15);
 }
 a:hover {
-  font-weight: 500;
+  font-weight: 500;  
+  color: var(--first-hover-color);
+
 }
 body {
   margin: 0;
-  /* display: flex;
-  place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
@@ -50,6 +54,9 @@ h1 {
   line-height: 1.1;
 }
 
+img {
+  border-radius: 4px;
+}
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -57,19 +64,24 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--second-background-color);
+  color: var(--first-text-color);
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  border-color: var(--first-hover-color);
 }
 
-@media (prefers-color-scheme: light) {
+input {
+  all: unset;
+  color: var(--first-text-color);
+  outline: none;
+}
+
+
+
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -80,4 +92,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
