--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 #root {
   margin: 0 auto;
   padding: 1rem;
-  /* text-align: center; */
+  background-color: var(--first-background-color);
+  color: var(--first-text-color);
 }
 
 
