--- a/src/components/ThemeSwitcher/ThemeSwitcher.module.css
+++ b/src/components/ThemeSwitcher/ThemeSwitcher.module.css
@@ -7,17 +7,17 @@
     width: 16px;
     height: 16px;
     border-radius: 50%;
-    border: 1px solid black;
+    border: 1px solid #393e46;
 
 }
 
 .themeBtn:nth-child(1){
-    background-color: white;
+    background-color: #222831;
 }
 
 .themeBtn:nth-child(2){
-    background-color: black;
+    background-color: #d9dad7;
 }
 .active{
-    border-color: orangered;
+    border-color: #f96d00;
 }
