--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -34,7 +34,7 @@
 }
 .goBackLink {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 1px solid var(--first-text-color);
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -46,8 +46,8 @@
   display: inline-block;
 }
 .goBackLink:hover {
-  color: var(--second-hover-color);
-  border-color: var(--second-hover-color);
+  color: var(--first-hover-color);
+  border-color: var(--first-hover-color);
 }
 
 @media screen and (min-width: 860px) {
