--- a/src/components/ThemeSwitcher/ThemeSwitcher.module.css
+++ b/src/components/ThemeSwitcher/ThemeSwitcher.module.css
@@ -26,7 +26,7 @@
     position: relative;
     display: inline-block;
     width: 50px;
-    height: 24px;
+    height: 26px;
   }
   
   /* Hide default HTML checkbox */
@@ -51,11 +51,8 @@
   
   .slider:before {
     position: absolute;
-    content: "";
-    height: 20px;
-    width: 20px;
-    left: 2px;
-    bottom: 2px;
+    content: "\1F609";
+    top: 1px;
     background-color: #d9dad7;
     -webkit-transition: .4s;
     transition: .4s;
@@ -70,6 +67,7 @@
   }
   
   input:checked + .slider:before {
+    content: '\1F60E';
     background-color: #222831;
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
